# ChangeLog for dev-perl/Devel-Cycle
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-Cycle/ChangeLog,v 1.24 2011/09/04 11:22:25 tove Exp $

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Devel-Cycle-1.11.ebuild:
  Cleanup

*Devel-Cycle-1.110.0 (31 Aug 2011)

  31 Aug 2011; Torsten Veller <tove@gentoo.org> +Devel-Cycle-1.110.0.ebuild:
  Change version scheme

  09 Jan 2010; Fabian Groffen <grobian@gentoo.org> Devel-Cycle-1.11.ebuild:
  Transfer Prefix keywords

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -Devel-Cycle-1.10.ebuild:
  Cleanup

*Devel-Cycle-1.11 (25 Aug 2009)

  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
  +Devel-Cycle-1.11.ebuild:
  Version bump via perl-bump experimental tool.

  02 May 2009; Torsten Veller <tove@gentoo.org> -Devel-Cycle-1.04.ebuild:
  Cleanup

*Devel-Cycle-1.10 (07 Sep 2008)

  07 Sep 2008; Torsten Veller <tove@gentoo.org> +Devel-Cycle-1.10.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Devel-Cycle-1.07.ebuild:
  Stable on x86, bug #169152.

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  Devel-Cycle-1.07.ebuild:
  Stable on ia64.

  09 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -Devel-Cycle-1.02.ebuild, Devel-Cycle-1.04.ebuild,
  Devel-Cycle-1.07.ebuild:
  Cleaning up stale ebuilds

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Devel-Cycle-1.07.ebuild:
  ppc stable

  07 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Devel-Cycle-1.07.ebuild:
  Marking stable amd64, sparc

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Devel-Cycle-1.02.ebuild, Devel-Cycle-1.04.ebuild, Devel-Cycle-1.07.ebuild:
  Adding perl dep; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Devel-Cycle-1.04.ebuild:
  Mark 1.04 stable on ia64

  24 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  -Devel-Cycle-1.05.ebuild:
  Cleaning up - 1.05 had problems in the weak ref support
