@@ -1,16 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST Email-MIME-ContentType-1.014.tar.gz 11172 RMD160 c1976cfffd2383756368b8338e6bd60f7a34d227 SHA1 816105214760ae8cc45ddad72a23cc925433e9f1 SHA256 8a864d9e57897057645eced00fd51c43a5756343ae97bca65835617a0c4fb495
 DIST Email-MIME-ContentType-1.015.tar.gz 11238 RMD160 9b917f5bd6a60ddc052350a9d96f7e5e90d63912 SHA1 6073cc4726c5f84fa0c2b7d4c2b6f27ecd7f1390 SHA256 0fccc8d00f133954956f6161d5f249ec4d3f9679d022c3ce2231234e7b1e93e6
 EBUILD Email-MIME-ContentType-1.014.ebuild 558 RMD160 a59ac9a8e1c5390464c2291e65d4a18d7868b0b7 SHA1 41375b5f19e911f6fbb2a94a4e77deb370e11cc1 SHA256 692e60be261ad87ebbc9f8dd3d68954f9f6f5fdfcd9166b00969c31d6d035eb5
-EBUILD Email-MIME-ContentType-1.15.0.ebuild 578 RMD160 341a5a6faed3363f3d9ad32c770d39e010bfa9c2 SHA1 762cc0d08ed67b396e74a3cfb089dd4ccdfa5e5b SHA256 e1d86f0c3c8da4ac496791fd7e9cffe5006d632bc7db15320599f69acfc4303e
-MISC ChangeLog 2592 RMD160 d11a546cd49b960937a07c58e2f73595be081e74 SHA1 7a0a6ad5b761dd35f28784db386f2868dcc4022c SHA256 c3c7ab76f4645d40a9ccad70fc130151b87b938c68e1214e145fd52ec0627fda
+EBUILD Email-MIME-ContentType-1.15.0.ebuild 576 RMD160 e82ba2cc1bd2f9e9acfdaa3aac7f34fa6f8eb121 SHA1 fa90f082aa60ed385902b266682061fa85e3b32a SHA256 da7ab470e4fe31ded88b296578fa5468a269dee79d59b6d33b968818257ee4f8
+MISC ChangeLog 2717 RMD160 195e4d9f038081f468f2a675e96e3bc8a72718ef SHA1 f58761ee5d16eff2c0ea17421828f48e4e62095b SHA256 828a0633491b15c9cd86a866ec1cd176b5b7b212361d121bc0aee0b10456384e
 MISC metadata.xml 248 RMD160 359a20973aad03d01283cdf1709d3d2005077a2d SHA1 8c8987201acdd4cbd4683e7099498480ff8cbd47 SHA256 1e943434387a7d1b6702f4b9ae35640cbf961048953ed4b26d636488e8c274b7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk5jYDEACgkQV3J2n04EauyfQACgo65+nyQYLsVe16oxu3gHrhGB
-0dUAni1p74OAjOAQE3ODftxjRPDZ/Lzj
-=iNd3
+iQEcBAEBCgAGBQJPR2H1AAoJEOTDgjZ80txdRu8H/j4xn77xPHbaR7TH6lbeJ8uH
+8LTZ5wPSX+0/aPzcqMHynliZXdY4mv93Gy3KwUBPL69DQYBxqzETH+4jqKMhDF5P
+9Gt+pfA9xnyVS1FuKuV2kOY72EOHWxjXxCAVX3I8A8NCtj56b47eaQJyUUPX9t9D
+vu4DoLNyySSsL9Lc2yLaAZmrIWOySD9XFgEPTPDkmmrtqQJzEuE35X4STaSlKGag
+MX4m117ae6SqqL8UPZREHeHx/qKLHKG1FDF5CqnRGaWkKSmLVNfBmINqsA316IYO
+qp8wkpjKUKHAB4tyyP3tShuHsaek2ROkfZyOiWskCKKOfXIXek3aEjA9ohcJfRo=
+=hY6V
 -----END PGP SIGNATURE-----
