@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Devel-Cycle
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-Cycle/ChangeLog,v 1.24 2011/09/04 11:22:25 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-Cycle/ChangeLog,v 1.25 2012/02/24 10:05:24 ago Exp $
+
+  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> Devel-Cycle-1.110.0.ebuild:
+  Stable for amd64, wrt bug #400085
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -Devel-Cycle-1.11.ebuild:
   Cleanup
